Oppdatering for bedre kode pluss forskjeller mellom R og S
Endret rekkefølge på html-kode for å bruke flex istedenfor grid. Endret rekkefølge på importering av css-filer for å slippe å bruke !IMPORTANT.
La til forskjell mellom R og S i mattefagene

--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/matte_r.css">
     <link rel="stylesheet" href="/style/programfag.css">
+    <link rel="stylesheet" href="/style/matte_r.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Matematikk-R</title>
 </head>
@@ -32,12 +32,25 @@
             <a href="#fagnummer1" id = "første-fag">Matematikk-R1</a>
             <a href="#fagnummer2" id = "andre-fag">Matematikk-R2</a>
         </div>
+        <div id="forskjell-r-og-s-matte">
+            <h2>Forskjell på R og S</h2>
+            <p>&#x2022; R: Vektorer er et hovedtema og man går enda dypere ned i funksjoner.</p>
+            <p>&#x2022; S: Sannsynlighetsregning, statistikk og økonomi er viktige temaer.</p>
+            <p>&#x2022; S fokuserer mer på samfunnsfaglige problemstillinger, R mer på realfaglige problemstillinger.</p>
+            <p>&#x2022; S kan oppleves som et noe mindre fag, og man har litt bedre tid enn i R.</p>
+        </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
             <h2>Matematikk-R1</h2>
             <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                    <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
+                </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
@@ -64,12 +77,6 @@
                             <li>Planlegge og gjennomføre et selvstendig arbeid med Reele datasett.</li>
                         </ul>
                     </ul>
-                </div>
-                <div class="rask-oversikt">
-                    <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
-                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
-                    <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
                 </div>
                 <div class="visuelt-element">
 
@@ -125,6 +132,12 @@
         <div id="fagnummer2" class="fag-informasjon">
             <h2>Matematikk-R2</h2>
             <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Realfagspoeng: <b>1</b></li>
+                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
+                    <li>Bygger på andre fag: <b>Ja, Matematikk-R1</b></li>
+                </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
@@ -153,12 +166,6 @@
                             <li>Bevis er viktig i matematikk. Det dreier seg både om å analysere og forstå et bevis, og å finne de bærende ideene i et bevis.</li>
                         </ul>
                     </ul>
-                </div>
-                <div class="rask-oversikt">
-                    <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>1</b></li>
-                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
-                    <li>Bygger på andre fag: <b>Ja, Matematikk-R1</b></li>
                 </div>
                 <div class="visuelt-element">
 
