--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/matte_s.css">
     <link rel="stylesheet" href="/style/programfag.css">
+    <link rel="stylesheet" href="/style/matte_s.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Matematikk-S</title>
 </head>
@@ -33,12 +33,25 @@
             <a href="#fagnummer1" id = "første-fag">Matematikk-S1</a>
             <a href="#fagnummer2" id = "andre-fag">Matematikk-S2</a>
         </div>
+        <div id="forskjell-r-og-s-matte">
+            <h2>Forskjell på R og S</h2>
+            <p>&#x2022; R: Vektorer er et hovedtema og man går enda dypere ned i funksjoner.</p>
+            <p>&#x2022; S: Sannsynlighetsregning, statistikk og økonomi er viktige temaer.</p>
+            <p>&#x2022; S fokuserer mer på samfunnsfaglige problemstillinger, R mer på realfaglige problemstillinger.</p>
+            <p>&#x2022; S kan oppleves som et noe mindre fag, og man har litt bedre tid enn i R.</p>
+        </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
             <h2>Matematikk-S1</h2>
             <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                <h3>Rask oversikt</h3>
+                <li>Realfagspoeng: <b>0.5</b></li>
+                <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
+            </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
@@ -50,12 +63,6 @@
                         <li>Potenser</li>
                         <li>Logaritmer</li>
                     </ul>
-                </div>
-                <div class="rask-oversikt">
-                    <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
-                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
-                    <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
                 </div>
                 <div class="visuelt-element">
 
@@ -112,6 +119,12 @@
         <div id="fagnummer2" class="fag-informasjon">
             <h2>Matematikk-S2</h2>
             <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
+                    <li>Bygger på andre fag: <b>Ja, Matematikk-S1</b></li>
+                </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
@@ -123,12 +136,6 @@
                         <li>Statistikk</li>
                         <li>Hva og hvorfor</li>
                     </ul>
-                </div>
-                <div class="rask-oversikt">
-                    <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
-                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
-                    <li>Bygger på andre fag: <b>Ja, Matematikk-S1</b></li>
                 </div>
                 <div class="visuelt-element">
 
