Fikset bilde-karusell-greie til kjemisiden
La til en bilde-karusell lik den på den gamle nettsiden

--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -212,7 +212,7 @@
             <h3>Bilder fra timen</h3>
             <div class="carousel-container">      
                 <!-- Slideshow container -->
-                <div class="slideshow-container">
+                <div id="slideshow-container">
 
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
@@ -230,7 +230,7 @@
                     <div class="mySlides fade">
                         <img src="/assets/imgs/kjemi/bilde_fra_timen_4.jpg">
                     </div>
-                
+
                     <div class="mySlides fade">
                         <img src="/assets/imgs/kjemi/bilde_fra_timen_5.jpg">
                     </div>
