Endret rekkefølge på fagene og justerte størrelse på bilde og padding til tekst. La også til introtekst fra den gamle nettsiden

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
-                    <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Informasjonsteknologi</p>
-                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
                 <a href="programfag/fysikk/" class="fag_i_meny">
                     <img src="assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Fysikk</p>
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="programfag/kjemi/" class="fag_i_meny">
+                    <img src="/assets/imgs/kjemi/labbilde.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Kjemi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/biologi/" class="fag_i_meny">
@@ -48,19 +48,9 @@
                     <p>Biologi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="programfag/s_matte/" class="fag_i_meny">
-                    <img src="assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Matematikk-S</p>
-                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="programfag/r_matte/" class="fag_i_meny">
-                    <img src="assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Matematikk-R</p>
-                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="programfag/kjemi/" class="fag_i_meny">
-                    <img src="/assets/imgs/kjemi/labbilde.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Kjemi</p>
+                <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
+                    <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Informasjonsteknologi</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="programfag/tekforsk/" class="fag_i_meny">
@@ -73,6 +63,16 @@
                     <p>Geofag</p>
                     <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
+                <a href="programfag/r_matte/" class="fag_i_meny">
+                    <img src="assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Matematikk-R</p>
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="programfag/s_matte/" class="fag_i_meny">
+                    <img src="assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Matematikk-S</p>
+                    <img src="assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
                 <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
                 <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
             </div>
@@ -82,9 +82,35 @@
         <!-- For å legge til nye fag, kopier et helt "fag-element" div og endre tittel, bilde, hvor se mer linken går etc. -->
         <!-- For å fjerne fag, slett den "fag-element" diven du vil fjerne. -->
         <div id="fag-oversikt">
+            <div class="fag-element">
+                <img src="assets/imgs/fysikk/placeholder_fysikk.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Fysikk</h3>
+                    <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
+                    <p class="fag-sitat">"Det mest uforståelige med universet er at det er forståelig." - Albert Einstein</p>
+                    <a class ="fag-se-mer-knapp" href="programfag/fysikk/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Kjemi</h3>
+                    <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
+                    <p class="fag-sitat">"Kjemien har et eget språk, med egne symboler og notasjoner, som brukes for å beskrive sammenhenger og reaksjoner." - Snl.no</p>
+                    <a class ="fag-se-mer-knapp" href="programfag/kjemi/">Se mer →</a>
+                </div>
+                <img src="/assets/imgs/kjemi/labbilde.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="assets/imgs/biologi/dna_grønn.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Biologi</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Ingenting i biologien gir mening, untatt i lys av evolusjonen." - T.Dobzhansky</p>
+                    <a class ="fag-se-mer-knapp" href="programfag/biologi/">Se mer →</a>
+                </div>
+            </div>
             <div class = "fag-element">
                 <!-- Om bilde skal endres endre dettee bilde elementet.-->
-                <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" class="fag-bilde">
                 <div class = "fag-info">
                     <!-- Endre info/tittel her -->
                     <h3 class="fag-tittel">IT</h3>
@@ -92,39 +118,13 @@
                     <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
                     <a class ="fag-se-mer-knapp" href="programfag/informasjonsteknologi/">Se mer →</a>
                 </div>
-            </div>
-            <div class="fag-element">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Fysikk</h3>
-                    <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
-                    <p class="fag-sitat">"Fysikk er magi som fungerer!" - Dope Dame 3KDA</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/fysikk/">Se mer →</a>
-                </div>
-                <img src="assets/imgs/fysikk/placeholder_fysikk.png" class="fag-bilde">
-            </div>
-            <div class="fag-element">
-                <img src="/assets/imgs/kjemi/labbilde.png" class="fag-bilde">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Kjemi</h3>
-                    <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
-                    <p class="fag-sitat">"Kjemien har et eget språk, med egne symboler og notasjoner, som brukes for å beskrive sammenhenger og reaksjoner." - Snl.no</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/kjemi/">Se mer →</a>
-                </div>
-            </div>
-            <div class="fag-element">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Biologi</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
-                    <p class="fag-sitat">"Biologi er livets vitenskap!" - Smart Elev 2STA</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/biologi/">Se mer →</a>
-                </div>
-                <img src="assets/imgs/biologi/dna_grønn.png" class="fag-bilde">
+                <img src="assets/imgs/informasjonsteknologi/placeholder_IT.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-beskrivelse">Teknologi- og forskningslære på Elvebakken tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.</p>
                     <p class="fag-sitat">"Tekforsk er bare det beste faget!" - Trym Bringsrud Fekjær 2STF</p>
                     <a class ="fag-se-mer-knapp" href="programfag/tekforsk/">Se mer →</a>
                 </div>
@@ -132,29 +132,29 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Geofag</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-beskrivelse">Geofag på Elvebakken tar deg med på en reise gjennom jordens mange lag og prosesser. Her vil du utforske de vitenskapelige prinsippene som ligger til grunn for forståelsen av jorden og dens geologiske, atmosfæriske og hydrologiske systemer.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
                     <a class ="fag-se-mer-knapp" href="programfag/geofag/">Se mer →</a>
                 </div>
                 <img src="assets/imgs/geofag/strand.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
+                <img src="assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk - S</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <h3 class="fag-tittel">Matematikk - R</h3>
+                    <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/s_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk - R</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <h3 class="fag-tittel">Matematikk - S</h3>
+                    <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="programfag/s_matte/">Se mer →</a>
                 </div>
-                <img src="assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
+                <img src="assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
             </div>
         </div>
     </main>
