Basic rakett versjon

--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -93,7 +93,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/rakett_simulering/" width="510" height="470" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
