Mer realistisk rakett simulasjon

--- a/widgets/rakett_simulering/index.html
+++ b/widgets/rakett_simulering/index.html
@@ -11,6 +11,7 @@
     <canvas id="vektor-canvas" width="480" height="330"></canvas>
     <button id="reset-rocket">Reset rocket</button>
     <button id="launch-rocket">Launch rocket</button>
-    <script src="rakett_simularing.js"></script>
+    <script src="vek2.js"></script>
+    <script src="rakett_simulering.js"></script>
 </body>
 </html>
