--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -149,7 +149,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/quiz-skjelett/index.html" width="510" height="430" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -166,5 +166,6 @@
     <div id="footer-placeholder"></div>
     <script src="/script/footer.js"></script>
     <script src="/script/global.js"></script>
+    <script src="/script/quiz.js"></script>
 </body>
 </html>
