Fungerende quiz som tilpasser seg størrelser
Quizen kan tilpasse seg alle reelle skjermstørrelser. gjort ved å gradvis endre alt av padding, margin og font-size i quizen til den passer. Plasseringen av koden er ikke helt ferdig enda

--- a/widgets/quiz-skjelett/index.html
+++ b/widgets/quiz-skjelett/index.html
@@ -11,7 +11,7 @@
     <div id="panel">
         <h1>Eksempelquiz! :D</h1>
         <div id="spørsmål"></div>
-        <div id="alternativer">
+        <div id="alternativ-område">
             <div class="alternativ"></div>
             <div class="alternativ"></div>
             <div class="alternativ"></div>
@@ -19,7 +19,7 @@
         </div>
         <button onclick="sjekkSvar()" id="svarknapp">SVAR</button>
         <button onclick="spillIgjen()" id="spill-igjen-knapp">SPILL IGJEN</button>
-        <div id="score"></div>
+        <div id="poeng"></div>
         <script src="quiz-skjelett.js"></script>
     </div>
 </body>
