Sortering av kode

--- a/widgets/geofag_quiz/index.html
+++ b/widgets/geofag_quiz/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="quiz-skjelett.css">
-    <title>Quiz-skjelett</title>
+    <link rel="stylesheet" href="/widgets/felles_quiz_filer/quiz.css">
+    <link rel="stylesheet" href="geofag_quiz.css">
+    <title>Geofag quiz</title>
 </head>
 <body>
     <div id="panel">
-        <h1>Eksempelquiz! :D</h1>
+        <h1>Geofag quiz</h1>
         <div id="spørsmål"></div>
         <div id="alternativ-område">
             <div class="alternativ"></div>
@@ -20,7 +21,8 @@
         <button onclick="sjekkSvar()" id="svarknapp">SVAR</button>
         <button onclick="spillIgjen()" id="spill-igjen-knapp">SPILL IGJEN</button>
         <div id="poeng"></div>
-        <script src="quiz-skjelett.js"></script>
+        <script src="geofag_quiz.js"></script>
+        <script src="/widgets/felles_quiz_filer/quiz.js"></script>
     </div>
 </body>
 </html>
