--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -201,7 +201,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/drag_and_drop_kjemi_spill/index.html" width="510" height="470" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
