--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -101,7 +101,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/rediger_css_spill/" width="370" height="470" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
