--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -108,9 +108,7 @@
                 <div class="divider-element">
                     
                 </div>
-                <div class="interaktivt-element">
-                    Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
-                </div>
+                <div class="interaktivt-element"></div>
             </div>
         </div>
         <!-- bølgete linje -->
@@ -181,7 +179,7 @@
                     
                 </div>
                 <div class="interaktivt-element">
-                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="/widgets/tør_du_satse/index.html" width="510" height="430" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
