Gjorde rakettoppskyning mer mobilvennlig

--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -27,8 +27,8 @@
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Teknologi & Forskningslære 1</a>
-            <a href="#fagnummer2" id = "andre-fag">Teknologi & Forskningslære 2</a>
+            <a href="#fagnummer1" id = "første-fag">Tekforsk 1</a>
+            <a href="#fagnummer2" id = "andre-fag">Tekforsk 2</a>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
