Fikset bugg hvor di ikke kunne åpne vis verdier i vektor spill

--- a/widgets/vektor_spill/index.html
+++ b/widgets/vektor_spill/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="spill-tittel-div">Vektorer  <a href="/widgets/vektor_spill/" id="fullskjerm-link">Åpne i fullskjerm</a></div>
-    <canvas id="vektor-canvas" width="480" height="330"><button id="toggle-tekst-knapp">Vis verdier</button></canvas>
+    <canvas id="vektor-canvas" width="480" height="330"></canvas>
     <div id="level-knapper-div">
         <button id="level-0-knapp">Level 0</button>
         <button id="level-1-knapp" class="disabled">Level 1</button>
