--- a/widgets/drag_and_drop_kjemi_spill/index.html
+++ b/widgets/drag_and_drop_kjemi_spill/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="drag_and_drop_kjemi_spill.css">
-    <title>Vektor spill</title>
+    <title>Drag and drop</title>
 </head>
 <body>
     <h1 id="spill-tittel">Match påstand med kategori</h1>
