--- a/widgets/tør_du_satse/index.html
+++ b/widgets/tør_du_satse/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="panel">
         <h1>Tør du satse?</h1>
-        <div id="hovedtekst">Spillet går ut på at man kaster en terning, og så satser på om det neste kastet blir høyere eller lavere. Hvis det blir likt kommer man videre uansett. Hver gang du kommer videre får du ett poeng, men hvis du tar feil mister du alle poengene dine, så det gjelder å stoppe i tide :)</div>
         <div id="terningkast-tekst"></div>
+        <div id="hovedtekst">Spillet går ut på at man kaster en terning, og så satser på om det neste kastet blir høyere eller lavere. Hvis det blir likt kommer man videre uansett. Hver gang du kommer videre får du ett poeng, men hvis du tar feil mister du alle poengene dine</div>
         <div id="valg">
             <button id="stopp-knapp" onclick="stopp()">STOPPE</button>
             <button id="satse-knapp" onclick="sats()">SATSE</button>
